# edon-cav-engine

./: .dockerignore  .env  .gitattributes  .gitignore  ABLATION_FINAL_SUMMARY.md  ABLATION_RESULTS_SUMMARY.md  ADAPTIVE_GAINS_BEST_CONFIG.md  ADAPTIVE_GAINS_FINAL.md  ADAPTIVE_GAINS_FINAL_SUMMARY.md  ADAPTIVE_GAINS_IMPLEMENTATION.md  ADAPTIVE_GAINS_IMPLEMENTATION_COMPLETE.md  ADAPTIVE_GAINS_SUMMARY.md  ADAPTIVE_GAINS_V2.md  ADAPTIVE_GAINS_V6.md  ADAPTIVE_MEMORY_STATUS.md  AGGRESSIVE_FIXES_V2.md  ALL_3_RECOMMENDATIONS_COMPLETE.md  ALL_3_RECOMMENDATIONS_STATUS.md  ALL_3_TASKS_COMPLETE.md  ALL_3_TASKS_FINAL_REPORT.md  API_KEYS_STATUS.md  BALANCED_FIXES.md  BASE_GAIN_VALIDATION_REPORT.md  BUILD_SUCCESS.md  CAV_NORMALIZATION_IMPLEMENTATION.md  COMMIT_COMMANDS.md  COMPLETE_FINAL_SUMMARY.md  CONCRETE_ACTION_PLAN.md  COPY_ALL_DATASETS.ps1  COPY_MISSING_FILES.ps1  COPY_TRAINING_DATA.ps1  COPY_WESAD_DATA.ps1  CURRENT_STATUS.md  DATASETS_FOUND.md  DATASET_INVENTORY.md  DATASET_LOCATIONS.md  DATASET_TESTING_SUMMARY.md  DIAGNOSTIC_RESULTS.md  Dockerfile  EDON_CORE_AUDIT_REPORT.md  (+294 more)
.streamlit/: config.toml
EDON_v1.0.1_OEM_RELEASE/: README.md
api/: main.py
app/: __init__.py  adaptive_memory.py  edge_bridge.py  engine.py  engine_loader_patch.py  engine_state.py  infer_fallback.py  licensing.py  main.py  models.py  robot_stability_memory.py
cav_engine_v3_2_LGBM_2025-11-08/: README_SDK.txt  cav_embedder_unused.joblib  cav_state_scaler_v3_2.joblib  cav_state_schema_v3_2.json  demo_infer_example.py
clients/: robot_example.py
controllers/: edon_v8_reflex.py
dashboard2/: package-lock.json  package.json
data/: edon_cav_10k.jsonl  edon_cav_10k.parquet  memory.db  oem_sample_window.json  oem_sample_windows.json  test_memory.db
demo_mujoco/: ADAPTIVE_BASELINES_ADDED.md  ADAPTIVE_MEMORY_ADDED.md  ADAPTIVE_MEMORY_FIX.md  API_STATE_AWARENESS_EXPLANATION.md  CLEAR_ADAPTIVE_MEMORY.md  COMMIT_CHECKLIST.md  DEMO_READINESS_CHECKLIST.md  DISABLE_ADAPTIVE_MEMORY.md  DISABLE_ADAPTIVE_MEMORY_FOR_DEMO.md  EDON_CORE_FEATURES_USAGE.md  EDON_OUT_OF_THE_BOX.md  EDON_REAL_WORLD_LIMITS.md  EDON_SAFETY_MECHANISM.md  EDON_TRAINING_AND_DAY1_PERFORMANCE.md  INSTALL_MUJOCO.md  METRICS_EXPLANATION.md  OEM_DEPLOYMENT_WHAT_THEY_NEED.md  OEM_ENVIRONMENT_DESCRIPTION.md  OEM_TRAINING_GUIDE.md  OEM_VERIFICATION_GUIDE.md  QUICK_FIX_CONSISTENT_GREEN.md  QUICK_TRAINING_FOR_DEMO.md  README.md  REALISM_FEATURES.md  REAL_WORLD_SCENARIO_EDON_SAFETY.md  REAL_WORLD_TRAINING_EXAMPLE.md  REAL_WORLD_VS_DEMO_ENVIRONMENT.md  ROADMAP.md  RUN_DEMO_WHILE_TRAINING.md  STATUS_CHECK.md  TECHNICAL_WHY_EDON_MAKES_THINGS_WORSE.md  TRAINING_ANALYSIS.md  TRAINING_MODE_GUIDE.md  TRAINING_TIME_ESTIMATE.md  TRAINING_VS_CORE.md  WHY_EDON_ADDS_INTERVENTIONS.md  WHY_EDON_CAN_PERFORM_WORSE.md  WHY_EDON_DISABLED_WHEN_HELPING.md  ZERO_SHOT_MODULATION_FIXES.md  check_port.py  (+10 more)
docs/: AUTH_ABSTRACTION_IMPLEMENTATION.md  AUTH_MIGRATION_GUIDE.md  CAV_SPEC.md  COMMERCIALIZATION_COMMANDS.md  DASHBOARD_SDK_SUMMARY.md  EDON_100K_Dataset_Summary.md  ENVIRONMENTAL_API_SETUP.md  EVALUATION_LICENSE.md  LICENSE_ENFORCEMENT.md  NDA.md  OEM_API_CONTRACT.md  OEM_BRIEF.md  OEM_BUILD_SUMMARY.md  OEM_INTEGRATION.md  OEM_ONBOARDING.md  OEM_PIPELINE_COMMANDS.md  OEM_ROBOT_STABILITY.md  OEM_RUN_COMMANDS.md  PROJECT_SUMMARY.md  README.md  README_ADAPTIVE.md  README_DASHBOARD.md  README_OEM.md  RESTART_SERVER.md  SAAS_MODEL.md  START_SERVER.md  START_SERVER_CORRECT.md  TEST_RESULTS.md  TRAINING_V3_1_COMMANDS.md  TRAINING_V3_2_COMMANDS.md
edon-mago/: README.md
env/: __init__.py  edon_humanoid_env.py  edon_humanoid_env_v8.py
evaluation/: EDON_V31_HS_V4_CONFIG.md  README.md  __init__.py  config.py  edon_controller_v3.py  edon_state.py  example_integration.py  humanoid_runner.py  metrics.py  mock_env.py  randomization.py  stress_profiles.py
examples/: robot_stability_example.py
metrics/: edon_v8_metrics.py
models/: cav_state_schema_v2.json  cav_state_schema_v3.json  cav_state_schema_v3_1.json
notebooks/: 01_build_cav.ipynb  02_visualize.ipynb
reports/: eval_v3_3.json  eval_wesad.json  eval_wesad_local.json  last_eval.json  model_info.json
results/: ablation_reflex_only.json  ablation_strategy_only.json  baseline.csv  baseline.json  baseline_TRUE_30.json  baseline_boost_test1_seed1_medium_stress.csv  baseline_boost_test1_seed1_medium_stress.json  baseline_boost_test1_seed2_medium_stress.csv  baseline_boost_test1_seed2_medium_stress.json  baseline_boost_test1_seed3_medium_stress.csv  baseline_boost_test1_seed3_medium_stress.json  baseline_boost_test2_seed1_medium_stress.csv  baseline_boost_test2_seed1_medium_stress.json  baseline_boost_test2_seed2_medium_stress.csv  baseline_boost_test2_seed2_medium_stress.json  baseline_boost_test2_seed3_medium_stress.csv  baseline_boost_test2_seed3_medium_stress.json  baseline_boost_test3_seed1_medium_stress.csv  baseline_boost_test3_seed1_medium_stress.json  baseline_boost_test3_seed2_medium_stress.csv  baseline_boost_test3_seed2_medium_stress.json  baseline_boost_test3_seed3_medium_stress.csv  baseline_boost_test3_seed3_medium_stress.json  baseline_boost_test4_seed1_medium_stress.csv  baseline_boost_test4_seed1_medium_stress.json  baseline_boost_test4_seed2_medium_stress.csv  baseline_boost_test4_seed2_medium_stress.json  baseline_boost_test4_seed3_medium_stress.csv  baseline_boost_test4_seed3_medium_stress.json  (+486 more)
ros2/humanoid_edon_bridge/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
ros2/humanoid_edon_bridge/humanoid_edon_bridge/: __init__.py  edon_humanoid_bridge.py
ros2/humanoid_edon_bridge/msg/: HumanoidEmotionState.msg
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/include/edon/: edon.hpp  models.hpp  transport.hpp
sdk/cpp/src/: edon.cpp  transport_grpc.cpp
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/.venv_test/: pyvenv.cfg
sdk/python/.venv_test/Scripts/: activate  activate.bat
sdk/python/edon/: __init__.py  client.py  exceptions.py  grpc_transport.py
sdk/python/edon_sdk/: client.py  exceptions.py
sdk/python/examples/: basic_infer.py
sdk/python/tests/: test_basic_client.py
(+261 files in other folders)
