[project]
name = "edon-cav"
version = "0.1.0"
description = "EDON CAV (Context-Aware Vectors) - A lean data pipeline for generating 128-dimensional embeddings from physiological and environmental data"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "scipy>=1.11.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.scripts]
edon-cav = "cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
# Auto-discover packages
packages = { find = {} }
# Include root-level modules
py-modules = ["cli"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

