<?xml version="1.0"?>
<package format="3">
  <name>humanoid_edon_bridge</name>
  <version>0.1.0</version>
  <description>EDON → Humanoid ROS 2 bridge (publishes emotional/context mode and behavior profiles).</description>

  <maintainer email="founder@edonlabs.ai">EDON Labs</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
