[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edon"
version = "2.0.0"
description = "EDON CAV Engine Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }

dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
grpc = [
    "grpcio>=1.62.0",
    "grpcio-tools>=1.62.0",
]

[project.urls]
Homepage = "https://edon.local"
